Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2845

Commit e6b9cb533 causes problems with stats_over_http

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • None
    • 5.0.0
    • Core

    Description

      After TS-2559, stats_over_http generates errors like

      1400988784.563 2 192.168.201.14 ERR_READ_ERROR/200 21840 GET http://loki.ogre.com/stat - DIRECT/loki.ogre.com text/javascript
      1400988785.412 0 192.168.201.14 ERR_READ_ERROR/200 24152 GET http://loki.ogre.com/stat - DIRECT/loki.ogre.com text/javascript
      

      I have not investigated what the root cause is, but I know it started after this commit (git bisect )

      Attachments

        1. ts-2845.diff
          0.9 kB
          Bryan Call

        Activity

          People

            bcall Bryan Call
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: