TS-2845: Commit e6b9cb533 causes problems with stats_over_http